KOKU-1355: Fixed buttons moving in all forms on IE9
KOKULT-701
This time the fix was done by removing the unnecessary float: left property of
the IntalioInternal_StartButton which fixed the issue without introducing layout
or button bugs in other browsers.

--- a/kv/KOKU-Pyynto/Copyofform1_1.gi/css/style.css
+++ b/kv/KOKU-Pyynto/Copyofform1_1.gi/css/style.css
@@ -58,7 +58,7 @@ span.FormLabel, span.headerNote {
 }
 
 div[label=IntalioInternal_SpacerBlock] {
-  display: none !important;
+  visibility: hidden !important;
 } 
 
 .checkLabel {
@@ -106,7 +106,6 @@ span.required {
 span[label=IntalioInternal_StartButton], span.intalioButton {
     margin: 0px 8px 0px 0px !important;
     padding: 3px 10px !important;
-    float: left !important;
 }
 
 span.intalioButton {
