--- a/tiva/KOKU-TIVA/Forms/TIVA_Sending_Form.gi/css/style.css
+++ b/tiva/KOKU-TIVA/Forms/TIVA_Sending_Form.gi/css/style.css
@@ -69,7 +69,7 @@ span.FormLabel, span.headerNote {
 }
 
 div[label=IntalioInternal_SpacerBlock] {
-  display: none !important;
+  visibility: hidden !important;
 } 
 
 .checkLabel {
@@ -113,7 +113,6 @@ div.fieldset-padding {
 span[label=IntalioInternal_StartButton], span.intalioButton {
     margin: 0px 8px 0px 0px !important;
     padding: 3px 10px !important;
-    float: left !important;
 }
 
 span.intalioButton {
